--- a/docker.conf
+++ b/docker.conf
@@ -5,9 +5,11 @@ export DOCKER_DIR=/mnt/wsl/shared-docker
 export DOCKER_SOCK="$DOCKER_DIR/docker.sock"
 export DOCKER_HOST="unix://$DOCKER_SOCK"
 
-if [ ! -S "$DOCKER_SOCK" ]; then
+if [ ! -d "$DOCKER_DIR" ]; then
     mkdir -pm o=,ug=rwx "$DOCKER_DIR"
     chgrp docker "$DOCKER_DIR"
+fi
+
+if [ ! -S "$DOCKER_SOCK" ]; then
     /mnt/c/Windows/System32/wsl.exe -d $DOCKER_DISTRO sh -c "nohup sudo -b dockerd < /dev/null > $DOCKER_DIR/dockerd.log 2>&1"
-    clear
 fi
