substitute docker with podman

--- a/code.conf
+++ b/code.conf
@@ -4,8 +4,8 @@ export $(dbus-launch)
 export GTK_IM_MODULE="xim"
 export DONT_PROMPT_WSL_INSTALL=1
 
-realcode() {
+vscode() {
     [ ! -z $1 ] && pwd=$PWD && cd $(realpath $1) && /usr/bin/code . && cd $pwd && unset pwd \
         || /usr/bin/code
 }
-alias code='realcode'
+alias code='vscode'
