--- a/browser.conf
+++ b/browser.conf
@@ -1,4 +1,5 @@
 #!/bin/bash
 
-export BROWSER=/mnt/c/Program\ Files/Mozilla\ Firefox/firefox.exe
+#export BROWSER=/mnt/c/Program\ Files/Mozilla\ Firefox/firefox.exe
+export BROWSER=/usr/bin/firefox
 
