--- a/podman.conf
+++ b/podman.conf
@@ -2,4 +2,6 @@
 
 # in any linux kernels, the system is a private mount by default, systemd will modify it to `rshared`
 # but wsl initially doesn't contain systemd, so we're gonna make it manually
-sudo mount --make-rshared /
+#sudo mount --make-rshared /
+
+alias docker='podman'
