--- a/browser.conf
+++ b/browser.conf
@@ -3,3 +3,4 @@
 #export BROWSER=/mnt/c/Program\ Files/Mozilla\ Firefox/firefox.exe
 export BROWSER=/usr/bin/firefox
 
+alias firefox='tmux new -s "firefox" -d $BROWSER'
