--- a/code.conf
+++ b/code.conf
@@ -5,7 +5,7 @@ export GTK_IM_MODULE="xim"
 export DONT_PROMPT_WSL_INSTALL=1
 
 vscode() {
-    [ ! -z $1 ] && /usr/bin/code . $(realpath $1) \
+    [ ! -z $1 ] && /usr/bin/code $(realpath $1) \
         || /usr/bin/code
 }
 alias code='vscode'
