--- a/profile.conf
+++ b/profile.conf
@@ -1,14 +1,18 @@
 #!/bin/bash
 
-git_changes() {
+_profile_command_color() {
+    [ ! "$?" -eq "0" ] && echo -e "31" || echo -e "90"
+}
+
+_profile_git_changes() {
     if [ $(git status --porcelain 2> /dev/null | wc -l) -ne "0" ]; then
         echo -n "*"
     fi
 }
 
-git_branch() {
+_profile_git_branch() {
     git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/(\1)/'
 }
 
 # https://en.wikipedia.org/wiki/ANSI_escape_code#Colors
-PS1='\[\e[1;35m\]${debian_chroot:+($debian_chroot)}\n\[\e[;90m\]┌─ \[\e[1;36m\]\w \[\e[1;33m\]$(git_branch)\[\e[1;37m\]$(git_changes)\n\[\e[;90m\]└─ \[\e[m\]'
+PS1='\[\e[1;35m\]${debian_chroot:+($debian_chroot)}\n\[\e[;$(_profile_command_color)m\]┌─ \[\e[1;36m\]\w \[\e[1;33m\]$(_profile_git_branch)\[\e[1;37m\]$(_profile_git_changes)\n\[\e[;90m\]└─ \[\e[m\]'
