[docker] append logs when start dockerd

--- a/docker.conf
+++ b/docker.conf
@@ -11,5 +11,5 @@ if [ ! -d "$DOCKER_DIR" ]; then
 fi
 
 if [ ! -S "$DOCKER_SOCK" ]; then
-    /mnt/c/Windows/System32/wsl.exe -d $DOCKER_DISTRO sh -c "nohup sudo -b dockerd < /dev/null > $DOCKER_DIR/dockerd.log 2>&1"
+    /mnt/c/Windows/System32/wsl.exe -d $DOCKER_DISTRO sh -c "nohup sudo -b dockerd < /dev/null >> $DOCKER_DIR/dockerd.log 2>&1"
 fi
