use /home/vi instead of explicit home value

--- a/nvim.conf
+++ b/nvim.conf
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-NVIM_CONFIG_ROOT=~/.config/nvim
+NVIM_CONFIG_ROOT=$HOME/.config/nvim
 NVIM_LUA_INIT_URL=https://raw.githubusercontent.com/nvim-lua/kickstart.nvim/master/init.lua
 
 if [ -f "$(which nvim)" ]; then
