[vscode] set default profile as Minimal

--- a/code.conf
+++ b/code.conf
@@ -4,8 +4,6 @@ export $(dbus-launch)
 export GTK_IM_MODULE="xim"
 export DONT_PROMPT_WSL_INSTALL=1
 
-vscode() {
-    [ ! -z $1 ] && /usr/bin/code $(realpath $1) \
-        || /usr/bin/code
-}
-alias code='vscode'
+export VSCODE_DEFAULT_PROFILE=Minimal
+
+alias code='code --profile $VSCODE_DEFAULT_PROFILE'
