git: add gitbranch alias

--- a/git.conf
+++ b/git.conf
@@ -3,3 +3,5 @@
 # Configures commit signature
 export GPG_TTY=$(tty)
 #gpg-connect-agent updatestartuptty /bye >/dev/null
+
+alias gitbranch="git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/\1/'"
